# propagator_sim

./: .gitignore  .pylintrc  AGENTS.md  MANIFEST.in  README.md  _main.py  main.py  mkdocs.yml  pyproject.toml  simple_main.py
.github/: copilot-instructions.md
.github/workflows/: build_wheel_on_main.yaml  docs.yaml  pylint.yaml  release-on-tag.yaml  run_propagator.yml
docs/: cli.md  getting-started.md  index.md
docs/reference/: index.md  numba.md  propagator.md  propagator_cli.md  propagator_io.md
example/: config.json  dem.tif.aux.xml  dem_clip.tif  example.py  fuels.yaml  line.geojson  p_vegetation.txt  params.json  params_tiles.json  point.geojson  polygon.geojson  veg.tif.aux.xml
main/: 404.html  index.html  objects.inv
main/bibliography/: index.html
main/cli/: index.html
main/getting-started/: index.html
main/programmatic/: index.html
main/reference/: index.html
main/reference/io/: index.html
main/reference/numba/: index.html
main/reference/propagator/: index.html
main/search/: search_index.json
propagator/: __init__.py  constants.py  functions.py  logging_config.py  propagator.py  scheduler.py  types.py  utils.py
propagator_cli/: boundary_conditions.py  cli.py  console.py  geometry.py
propagator_io/: boundary_conditions.py  configuration.py  geometry.py  input.py
propagator_io/loader/: geotiff.py  protocol.py  tiles.py
src/: example.py  main.py
src/propagator/: __init__.py  constants.py  functions.py  logging_config.py  models.py  propagator.py  scheduler.py  types.py  utils.py
src/propagator/cli/: main.py
src/propagator/core/: __init__.py  constants.py  propagator.py  scheduler.py
src/propagator/core/numba/: __init__.py  models.py  propagation.py
src/propagator/io/: __init__.py  actions.py  boundary_conditions.py  configuration.py  geometry.py
src/propagator/io/loader/: geotiff.py  protocol.py  tiles.py
src/propagator/io/writer/: isochrones_geojson.py  metadata_json.py  protocol.py  raster_geotiff.py
src/propagator/numba/: __init__.py  functions.py  models.py  propagation.py
src/propagator_cli/: args_parser.py  cli.py  console.py
src/propagator_io/: actions.py  boundary_conditions.py  configuration.py  fuel.py  geo.py  geometry.py  input.py  output.py
src/propagator_io/loader/: geotiff.py  protocol.py  tiles.py
src/propagator_io/writer/: __init__.py  isochrones_geojson.py  metadata_json.py  protocol.py  raster_geotiff.py
tests/: test_core.py  test_propagator.py
