[project]
name = "propagator-sim"
version = "0.1.0"
description = "PROPAGATOR: An Operational Cellular-Automata Based Wildfire Simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "affine>=2.4.0",
    "angles>=2.0",
    "fiona>=1.10.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "rich>=14.1.0",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "sortedcontainers>=2.4.0",
    "utm>=0.8.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "ruff>=0.12.9",
    "pytest>=8.2.2",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = ["."]
testpaths = [
    "tests",
]
