[project]
name = "propagator"
version = "0.1.0"
description = "PROPAGATOR: An Operational Cellular-Automata Based Wildfire Simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "affine>=2.4.0",
    "angles>=2.0",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "rich>=14.1.0",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "utm>=0.8.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "ruff>=0.12.10",
    "pytest>=8.2.2",
    # Docs
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.30.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mike>=2.1.3",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = ["src", ]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501"]

[project.scripts] 
propagator = "propagator_cli.cli:main"
