[project]
name = "propagator"
version = "0.1.0"
description = "PROPAGATOR: An Operational Cellular-Automata Based Wildfire Simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "angles>=2.0",
    "fiona>=1.10.1",
    "numba==0.61.2",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "scipy>=1.16.1",
]

[project.optional-dependencies]
cli = [
    "rich>=14.1.0",
    "shapely>=2.1.1",
    "utm>=0.8.1",
    "affine>=2.4.0",
    "geopandas>=1.1.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "ruff>=0.12.12",
    "pytest>=8.4.2",
    # Docs
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.30.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mike>=2.1.3",
    "pyinstrument>=5.1.1",
    "ipython>=9.5.0",
    "notebook>=7.4.5",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501"]

[project.scripts]
propagator = "propagator_cli.cli:main"
